Bugfix: Posts don't overlap anymore (i.e. read more button works again)
Fixes #6

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description: Pohutukawa is a modern mobile-first, responsive WordPress theme bes
 
 Author: Elmastudio
 Author URI: https://www.elmastudio.de/
-Version: 1.0.3
+Version: 1.0.3.1
 License: GNU General Public License
 License URI: https://www.gnu.org/licenses/gpl.html
 Tags: post-formats, custom-colors, custom-header, custom-background, custom-menu, theme-options, threaded-comments, sticky-post, translation-ready
@@ -2804,7 +2804,9 @@ margin: 0px 7px 7px 0;
 .entry-content {
 	width:650px;
 	padding:40px 0 0 0;
-	float:left;
+}
+#content {
+		float: left;
 }
 #sidebar {
 	width:280px;
